<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/rating1"
            android:layout_width="@dimen/rating_size"
            android:layout_height="@dimen/rating_size"
            android:contentDescription="@string/rating_dialog_content_description_star_1"
            app:srcCompat="@drawable/vd_rating_dialog_star" />

        <ImageView
            android:id="@+id/rating2"
            android:layout_width="@dimen/rating_size"
            android:layout_height="@dimen/rating_size"
            android:layout_marginLeft="@dimen/rating_margin"
            android:layout_marginRight="@dimen/rating_margin"
            android:contentDescription="@string/rating_dialog_content_description_star_2"
            app:srcCompat="@drawable/vd_rating_dialog_star" />

        <ImageView
            android:id="@+id/rating3"
            android:layout_width="@dimen/rating_size"
            android:layout_height="@dimen/rating_size"
            android:contentDescription="@string/rating_dialog_content_description_star_3"
            app:srcCompat="@drawable/vd_rating_dialog_star" />

        <ImageView
            android:id="@+id/rating4"
            android:layout_width="@dimen/rating_size"
            android:layout_height="@dimen/rating_size"
            android:layout_marginLeft="@dimen/rating_margin"
            android:layout_marginRight="@dimen/rating_margin"
            android:contentDescription="@string/rating_dialog_content_description_star_4"
            app:srcCompat="@drawable/vd_rating_dialog_star" />

        <ImageView
            android:id="@+id/rating5"
            android:layout_width="@dimen/rating_size"
            android:layout_height="@dimen/rating_size"
            android:contentDescription="@string/rating_dialog_content_description_star_5"
            app:srcCompat="@drawable/vd_rating_dialog_star" />

    </LinearLayout>

    <EditText
        android:id="@+id/feedbackEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="top|start"
        android:hint="@string/rating_dialog_feedback_title"
        android:textColorHint="@color/rating_dialog_dark_gray"
        android:inputType="textAutoComplete|textMultiLine"
        android:minLines="4"
        android:maxLines="10"
        android:background="@drawable/rating_dialog_edittext_bg"
        android:textColor="@color/rating_dialog_black"
        android:visibility="gone" />

</LinearLayout>